flexbox style tweaks to fix overflow

--- a/src/layout/Flexbox.css
+++ b/src/layout/Flexbox.css
@@ -3,4 +3,5 @@
   box-sizing: border-box;
   min-height: 0;
   min-width: 0;
+  overflow: hidden;
 }
